--- a/analysis_scripts/fitness/balancing_selection_test.ipynb
+++ b/analysis_scripts/fitness/balancing_selection_test.ipynb
@@ -134,7 +134,7 @@
    "id": "e1daec0e-16e9-4f05-8ce0-c8cbd776c341",
    "metadata": {},
    "source": [
-    "From Nicholaisen and Desai, Genetics, 2013:\n",
+    "From Nicholaisen and Desai, Genetics, 2013, equation 8 (with no recombination):\n",
     "\n",
     "$N_e(t) = Nexp[-\\int_0^{\\infty}(1-e^{-st})^2\\rho(s)ds]$\n",
     "\n",
