updated file names for analytical test of background selection

--- a/analysis_scripts/fitness/background_selection_analytical.ipynb
+++ b/analysis_scripts/fitness/background_selection_analytical.ipynb
@@ -131,7 +131,7 @@
     "tags": []
    },
    "source": [
-    "### Calculate the reduced effective population size over time ($N_e(t)$) taking into account balancing selection"
+    "### Calculate the reduced effective population size over time ($N_e(t)$) taking into account background selection"
    ]
   },
   {
@@ -204,8 +204,8 @@
     "plt.ylabel('$N_e$')\n",
     "plt.xlim([0, 52])\n",
     "plt.tight_layout()\n",
-    "plt.savefig('../../figures/figure_outputs/balancing_selection.png', dpi = 300)\n",
-    "plt.savefig('../../figures/figure_outputs/balancing_selection.pdf', dpi = 300)\n",
+    "plt.savefig('../../figures/figure_outputs/background_selection.png', dpi = 300)\n",
+    "plt.savefig('../../figures/figure_outputs/background_selection.pdf', dpi = 300)\n",
     "\n",
     "plt.show()"
    ]
